Fix text readability on mobile hamburger menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,19 @@ nav a:hover {
     }
 
     /* Only apply side menu style if it is a list (index page) */
+    nav ul.mobile-menu li a {
+        display: block;
+        padding: 18px 28px;
+        font-size: 1rem;
+        font-weight: 400;
+        letter-spacing: 1px;
+        color: white;
+    }
+
+    nav ul.mobile-menu li a:hover {
+        color: #ccc;
+    }
+
     nav ul.mobile-menu {
         position: fixed;
         top: 0;
